# rules_postgresql

./: CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json  source.template.json
.github/workflows/: BUILD.bazel  release.yml  release_prep.sh
docs/: BUILD.bazel  postgres_server_test.md  postgresql_server_test.md
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
postgresql/: BUILD.bazel  BUILD.postgres.tpl.bazel  defs.bzl  deps.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
postgresql/private/: BUILD.bazel  postgres_server_test.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
postgresql/tests/: versions_test.bzl
scripts/: get_shasum.sh
