"Bazel dependencies"

module(
    name = "rules_postgresql",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "aspect_bazel_lib", version = "1.36.0")
bazel_dep(name = "rules_foreign_cc", version = "0.9.0")

bazel_dep(name = "gazelle", version = "0.29.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)

postgresql = use_extension("//postgresql:extensions.bzl", "postgresql")
postgresql.toolchain(postgresql_version = "15.3")
use_repo(postgresql, "postgresql_toolchains")

register_toolchains("@postgresql_toolchains//:all")
