# Override http_archive for local testing
local_repository(
    name = "rules_postgresql",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_postgresql setup #
######################
# Fetches the rules_postgresql dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_postgresql//postgresql:deps.bzl", "rules_postgresql_dependencies")

rules_postgresql_dependencies()

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

load("@rules_postgresql//postgresql:repositories.bzl", "postgresql_register_toolchains")

postgresql_register_toolchains(
    name = "postgres_15_3",
    postgresql_version = "15.3",
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies")

# Required bazel-lib dependencies

aspect_bazel_lib_dependencies()
