load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "postgres_server_test",
    srcs = ["postgres_server_test.bzl"],
    visibility = [
        "//docs:__subpackages__",
    ],
    deps = [
        "@aspect_bazel_lib//lib:expand_make_vars",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//postgresql:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//postgresql:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//postgresql:__subpackages__"],
)
